--- a/shell/.nikhilrc
+++ b/shell/.nikhilrc
@@ -4,6 +4,7 @@ CONFIGDIR="$HOME/.config"
 MCONFIGDIR="$HOME/.config/myconf"
 [ -f "$MCONFIGDIR/pathmod" ] && source "$MCONFIGDIR/pathmod"
 [ -f "$MCONFIGDIR/aliases/alias" ] && source "$MCONFIGDIR/aliases/alias"
+[ -f "$MCONFIGDIR/variables" ] && source "$MCONFIGDIR/variables"
 
 if hash fnm 2>/dev/null;then
 	eval "$(fnm env)"
