Using Auto Cpu Freq Cpu freq manage scripts not in use currently as testing auto cpu-freq

--- a/fontconfig/.config/fontconfig/fonts.conf
+++ b/fontconfig/.config/fontconfig/fonts.conf
@@ -9,10 +9,10 @@
   <test compare="less_eq" name="weight">
    <int>100</int>
   </test>
-  <test compare="more_eq" target="pattern" name="weight">
+  <test compare="more_eq" name="weight" target="pattern">
    <int>180</int>
   </test>
-  <edit mode="assign" name="embolden">
+  <edit name="embolden" mode="assign">
    <bool>true</bool>
   </edit>
  </match>
@@ -24,10 +24,10 @@
   <test compare="less_eq" name="weight">
    <int>100</int>
   </test>
-  <test compare="more_eq" target="pattern" name="weight">
+  <test compare="more_eq" name="weight" target="pattern">
    <int>180</int>
   </test>
-  <edit mode="assign" name="embolden">
+  <edit name="embolden" mode="assign">
    <bool>true</bool>
   </edit>
  </match>
@@ -39,10 +39,10 @@
   <test compare="less_eq" name="weight">
    <int>100</int>
   </test>
-  <test compare="more_eq" target="pattern" name="weight">
+  <test compare="more_eq" name="weight" target="pattern">
    <int>180</int>
   </test>
-  <edit mode="assign" name="embolden">
+  <edit name="embolden" mode="assign">
    <bool>true</bool>
   </edit>
  </match>
@@ -54,31 +54,31 @@
   <test compare="less_eq" name="weight">
    <int>100</int>
   </test>
-  <test compare="more_eq" target="pattern" name="weight">
+  <test compare="more_eq" name="weight" target="pattern">
    <int>180</int>
   </test>
-  <edit mode="assign" name="embolden">
+  <edit name="embolden" mode="assign">
    <bool>true</bool>
   </edit>
  </match>
  <dir>~/.fonts</dir>
  <match target="font">
-  <edit mode="assign" name="rgba">
+  <edit name="rgba" mode="assign">
    <const>rgb</const>
   </edit>
  </match>
  <match target="font">
-  <edit mode="assign" name="hinting">
+  <edit name="hinting" mode="assign">
    <bool>true</bool>
   </edit>
  </match>
  <match target="font">
-  <edit mode="assign" name="hintstyle">
+  <edit name="hintstyle" mode="assign">
    <const>hintslight</const>
   </edit>
  </match>
  <match target="font">
-  <edit mode="assign" name="antialias">
+  <edit name="antialias" mode="assign">
    <bool>true</bool>
   </edit>
  </match>
