Added art to lvim lvim

--- a/fontconfig/.config/fontconfig/fonts.conf
+++ b/fontconfig/.config/fontconfig/fonts.conf
@@ -2,14 +2,14 @@
 <!DOCTYPE fontconfig SYSTEM 'fonts.dtd'>
 <fontconfig>
  <match target="font">
-  <test compare="contains" name="family">
+  <test name="family" compare="contains">
    <string>Song</string>
   </test>
   <!-- check to see if the font is just regular -->
-  <test compare="less_eq" name="weight">
+  <test name="weight" compare="less_eq">
    <int>100</int>
   </test>
-  <test compare="more_eq" name="weight" target="pattern">
+  <test name="weight" compare="more_eq" target="pattern">
    <int>180</int>
   </test>
   <edit name="embolden" mode="assign">
@@ -17,14 +17,14 @@
   </edit>
  </match>
  <match target="font">
-  <test compare="contains" name="family">
+  <test name="family" compare="contains">
    <string>Sun</string>
   </test>
   <!-- check to see if the font is just regular -->
-  <test compare="less_eq" name="weight">
+  <test name="weight" compare="less_eq">
    <int>100</int>
   </test>
-  <test compare="more_eq" name="weight" target="pattern">
+  <test name="weight" compare="more_eq" target="pattern">
    <int>180</int>
   </test>
   <edit name="embolden" mode="assign">
@@ -32,14 +32,14 @@
   </edit>
  </match>
  <match target="font">
-  <test compare="contains" name="family">
+  <test name="family" compare="contains">
    <string>Kai</string>
   </test>
   <!-- check to see if the font is just regular -->
-  <test compare="less_eq" name="weight">
+  <test name="weight" compare="less_eq">
    <int>100</int>
   </test>
-  <test compare="more_eq" name="weight" target="pattern">
+  <test name="weight" compare="more_eq" target="pattern">
    <int>180</int>
   </test>
   <edit name="embolden" mode="assign">
@@ -47,14 +47,14 @@
   </edit>
  </match>
  <match target="font">
-  <test compare="contains" name="family">
+  <test name="family" compare="contains">
    <string>Ming</string>
   </test>
   <!-- check to see if the font is just regular -->
-  <test compare="less_eq" name="weight">
+  <test name="weight" compare="less_eq">
    <int>100</int>
   </test>
-  <test compare="more_eq" name="weight" target="pattern">
+  <test name="weight" compare="more_eq" target="pattern">
    <int>180</int>
   </test>
   <edit name="embolden" mode="assign">
