--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "shell/.oh-my-zsh"]
 	path = shell/.oh-my-zsh
 	url = https://github.com/ohmyzsh/ohmyzsh.git
+[submodule "icons/.local/share/icons/la-capitaine"]
+	path = icons/.local/share/icons/la-capitaine
+	url = https://github.com/keeferrourke/la-capitaine-icon-theme.git
