--- a/espanso/.config/espanso/match/base.yml
+++ b/espanso/.config/espanso/match/base.yml
@@ -78,3 +78,5 @@ matches:
     replace: 🤮
   - trigger: ":delta"
     replace: Δ
+  - trigger: ":pbrk"
+    replace: "<div style='page-break-before: always'></div>"
