Added and modified a lot. added more plugins refined lvim added pip completions

--- a/espanso/.config/espanso/match/base.yml
+++ b/espanso/.config/espanso/match/base.yml
@@ -80,3 +80,5 @@ matches:
     replace: Δ
   - trigger: ":pbrk"
     replace: "<div style='page-break-before: always'></div>"
+  - trigger: ":ppbrk"
+    replace: "<div id='pgno'></div>"
