--- a/mycli/.myclirc
+++ b/mycli/.myclirc
@@ -35,7 +35,7 @@ timing = True
 # latex, latex_booktabs, textile, moinmoin, jira, vertical, tsv, csv.
 # Recommended: ascii
 ; table_format = ascii
-table_format = double
+table_format = ascii
 
 # Syntax coloring style. Possible values (many support the "-dark" suffix):
 # manni, igor, xcode, vim, autumn, vs, rrt, native, perldoc, borland, tango, emacs,
@@ -72,7 +72,7 @@ prompt = '\t \u@\h:\d> '
 prompt_continuation = '->'
 
 # Skip intro info on startup and outro info on exit
-less_chatty = False
+less_chatty = True
 
 # Use alias from --login-path instead of host name in prompt
 login_path_as_host = False
