--- a/netrc/.netrc
+++ b/netrc/.netrc
@@ -1,1 +1,3 @@
-default login niksingh710 password ixio niksingh710@ix.io
+machine surge.surge.sh
+    login nik.singh710@gmail.com
+    password 9ac44b09b23e879cdb3e1a1ad6fd47fb
