changed path mod order

--- a/neofetch/.config/neofetch/config.conf
+++ b/neofetch/.config/neofetch/config.conf
@@ -24,14 +24,14 @@ print_info() {
     info "${c3} ​ ​  " term
     info "${c1} ​ ​  " term_font
     info "${c2} ​ ​  " font
-    info "${c1} ​ ​   " theme
+    # info "${c1} ​ ​   " theme
     info "${c2} ​ ​   " icons
     info "${c3} ​ ​  " packages
     info "${c1} ​ ​  " uptime
     info "${c3} ​ ​ ﬙ " gpu_driver
+    # info " ​ ​ ﱘ " song
     # info "${c1} ​   " disk
     # info " ​ ​  " cpu_usage
-#    info " ​ ​ ﱘ " song
     # [[ "$player" ]] && prin "Music Player" "$player"
     # info "${c2} ​ ​   " local_ip
     # info " ​ ​   " public_ip
